packages/gatsby-theme-carbon/src/components/Code/Code.module.scss
:global {
  code {
    font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono',
      'Bitstream Vera Sans Mono', Courier, monospace;
  }

  p > code,
  li > code,
  td > code {
    @include carbon--type-style('code-01');
    position: relative;
    display: inline;
    padding: 0 0.5em;
    font-size: 0.75em;
    bottom: 0.0625em;
    border-radius: 4px;
    background-color: $ui-03;
    color: $text-01;
  }

  // Add's additional length for scrolling under sidebar
  .token:last-of-type {
    margin-right: 64px;
  }
}

.row {
  position: relative;
  font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono',
    'Bitstream Vera Sans Mono', Courier, monospace;
  color: $inverse-01;
  @include carbon--type-style('code-02');
  width: calc(100% + 2rem);
  @include carbon--breakpoint('lg') {
    width: calc(67% + 1rem);
  }
}

.row * {
  scrollbar-width: none;
}

.row svg {
  fill: $inverse-01;
}

.container {
  position: relative;
  width: 100%;
}

.highlight {
  padding: $spacing-05;
  position: relative;
  overflow: auto;
  width: 100%;
}

.sideBarMinHeight {
  min-height: 96px;
}

// feedback tooltip adjustments
.container :global(.bx--btn--copy__feedback) {
  position: absolute;
  &::before {
    left: $spacing-07;
  }
  &::after {
    left: $spacing-07;
  }
  &::before,
  &::after {
    z-index: z('floating');
  }
}

.path-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: $spacing-09;
  background: $ui-05;
  padding-left: $spacing-05;
  padding-right: $spacing-03;
  border-bottom: 1px solid $inverse-02;
}

.path {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.show-more-button {
  @include carbon--type-style('body-short-01');
  font-family: 'IBM Plex Sans VF', sans-serif;
  position: absolute;
  right: $spacing-03;
  bottom: $spacing-03;
  background: $ui-05;
  border: none;
  color: white;
  cursor: pointer;
  padding: $spacing-03;
  padding-left: $spacing-05;
  display: inline-flex;
  align-items: center;
  transition: background-color $duration--fast-02;
  &:hover {
    background-color: $inverse-02;
  }
}

.show-more-button span {
  margin-right: $spacing-03;
}

.sidebar {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 16px;
  padding: 8px;
  padding-left: 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: visible;
  background: linear-gradient(
    90deg,
    rgba(23, 23, 23, 0) 0%,
    rgba(23, 23, 23, 1) 24px
  );
}

// Copy button and src button
.button,
.copy-button.button {
  width: 32px;
  height: 32px;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  background: transparent;
  transition: background $duration--fast-02;
  z-index: 1000;
  &:hover {
    background-color: $inverse-02;
  }
}

.path-row .button {
  position: relative;
  right: 0;
  top: 0;
}

.sidebar .button {
  position: relative;
  margin-bottom: $spacing-01;
  flex-shrink: 0;
}

